--- a/主页style.css
+++ b/主页style.css
@@ -1,66 +1,95 @@
 
 body{
-    /* 背景图 */
-    background-image: url(./图片/背景3.png);
-    margin-top: 150px;
+    margin: 0;
 }
+
+.page1{
+    background-image: url(./图片/背景3.png);
+    height: 1080px;
+}
+
 .pic1{
     border: 8px solid whitesmoke;
     border-radius: 58px;
+    padding-top: 180px;
 }
+
 #touxiang{
     text-align: center;
 }
+
 .box1{
     background-color: rgba(255, 255, 255, 0.397);
     margin: 10px 50px;
     padding-bottom: 20px;
+    border: 5px rgba(255, 255, 255, 0.397) solid;
+    border-radius: 20px;
+    margin-bottom: 470px;
 }
+
 .box1 p{
     text-align: center;
 }
+
 .box1 a{
     text-decoration: none;
     color: black;
 }
+
 .box2{
     padding-bottom: 50px;
 }
+
 h1{
     font-style: italic;
     font-family: Georgia, 'Times New Roman', Times, serif;
     text-align: center;
 }
+
 h4{
     text-align: center;
 }
-#qq{
-    margin-top: 1px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    font-weight: lighter;
-    text-decoration: underline;
-    color: black;
-}
-#bl{
-    margin-bottom: 1px;
-}
-#bl a{
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    font-weight: lighter;
-    text-decoration: underline;
-    color: black;
-}
-#bl a:visited{
-    color: rgb(24, 84, 141);
-}
-#qq a:visited{
-    color: rgb(24, 84, 141);
-}
+
 .bottom{
-    background-color: rgba(60, 100, 173, 0.329);
-    padding-bottom: 10px;
+    background-color: rgb(253, 254, 255);
+    padding-bottom: 70px;
 }
+
 .bottom p{
     text-align: center;
 }
 
+.links{
+    background-color: white;
+    position: fixed;
+    bottom: 10px;
+    left: 50px;
+    right: 50px;
+    border: 5px rgb(255, 255, 255) solid;
+    border-radius: 20px;
+}
+
+#bl{
+    position: relative;
+    left: 16%;
+    float: left;
+    width: 33.3%;
+}
+
+#wc{
+    position: relative;
+    right: 16%;
+    float: right;
+}
+
+#bg{
+    position: relative;
+    left: 11%;
+}
+
+.links a{
+    color: rgb(50, 100, 173);
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    text-decoration: none;
+    font-weight: 1000;
+}
