--- a/关于我style.css
+++ b/关于我style.css
@@ -4,10 +4,12 @@ body{
 .box1{
     background-color: rgba(255, 255, 255, 0.384);
     margin-top: 20em;
-    margin-left: 8em;
-    margin-right: 8em;
-    padding-top: 20px;
-    padding-bottom: 20px;
+    margin-left: 5em;
+    margin-right: 5em;
+    border: 5px rgba(255, 255, 255, 0.397) solid;
+    border-radius: 20px;
+    padding: 20px 0;
+
 }
 .box1 h3{
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
