--- a/联系我.css
+++ b/联系我.css
@@ -4,11 +4,13 @@ body{
 .box1{
     background-color: rgba(255, 255, 255, 0.397);
     margin-top: 20em;
-    margin-left: 8em;
-    margin-right: 8em;
+    margin-left: 5em;
+    margin-right: 5em;
     padding-top: 20px;
     padding-bottom: 20px;
-    padding-left: 10px
+    padding-left: 10px;
+    border:  5px rgba(255, 255, 255, 0.397) solid;
+    border-radius: 20px;
 }
 .box1 a{
     text-decoration: none;
