--- a/主页style.css
+++ b/主页style.css
@@ -10,7 +10,7 @@ body{
 
 .pic1{
     border: 8px solid whitesmoke;
-    border-radius: 58px;
+    border-radius: 50%;
     padding-top: 180px;
 }
 
