--- a/主页style.css
+++ b/主页style.css
@@ -11,7 +11,7 @@ body{
 .pic1{
     border: 8px solid whitesmoke;
     border-radius: 50%;
-    padding-top: 180px;
+    margin-top: 180px;
 }
 
 #touxiang{
