--- a/关于我style.css
+++ b/关于我style.css
@@ -1,23 +1,72 @@
 body{
-    background-image: url(./图片/关于我背景.jpg)
+    margin: 0px;
+    padding: 0px;
+    box-sizing: border-box;
+    background-image: url(./图片/R-C\ \(1\).png);
 }
-.box1{
-    background-color: rgba(255, 255, 255, 0.384);
-    margin-top: 20em;
-    margin-left: 5em;
-    margin-right: 5em;
-    border: 5px rgba(255, 255, 255, 0.397) solid;
-    border-radius: 20px;
-    padding: 20px 0;
 
+.A1{
+    padding: 30px 20px;
+    display: flex;
 }
-.box1 h3{
-    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+
+.B1{
+    margin-left: 20px;
+    width: 40px;
+    padding: 0px 5px;
+    background-color: rgba(42, 155, 248, 0.637);
+    border: 0px;
+    border-radius: 3px;
 }
-.box1 p{
-    font-family: Arial, Helvetica, sans-serif;
+
+.B1 h1{
+    text-align: center;
 }
-.box1 a{
-    text-decoration: none;
-    color: black;
+
+.B2{
+    padding-left: 20px;
+    background-color: rgba(255, 255, 255, 0.295);
+    border-radius: 3px;
+}
+
+.B2 p{
+    margin: 0;
+    word-spacing: 6px;
+    font-family: cursive;
+    line-height: 30px;
+}
+
+.C1{
+    text-align: center;
+    background-color: rgba(255, 235, 205, 0.438);
+    border-radius: 3px;
+    margin: 0px 20px 0px 40px;
+}
+
+.C1 h1{
+    margin-bottom: 5px;
+}
+
+.C2{
+    margin-left: 40px;
+    margin-right: 20px;
+    background-color: rgba(255, 255, 255, 0.295);
+}
+
+.C2 h3{
+    margin: 0px;
+    text-align: center;
+    font-weight: 200;
+}
+
+.A3 h1{
+    text-align: center;
+    color: rgb(0, 0, 0);
+    font-weight: lighter;
+}
+
+.A4 h3{
+    margin-left: 40px;
+    font-weight: lighter;
+    text-align: left;
 }
