--- a/联系我.css
+++ b/联系我.css
@@ -1,18 +1,31 @@
 body{
-    background-image: url(./图片/关于我背景.jpg);
+    background-image: url(./图片/R-C\ \(1\).png);
+    padding: 0px;
+    margin: 0;
 }
+
+.box{
+    height: 1080px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
 .box1{
-    background-color: rgba(255, 255, 255, 0.397);
-    margin-top: 20em;
-    margin-left: 5em;
-    margin-right: 5em;
-    padding-top: 20px;
-    padding-bottom: 20px;
-    padding-left: 10px;
-    border:  5px rgba(255, 255, 255, 0.397) solid;
-    border-radius: 20px;
+    margin-left: 20px;
+    display: flex;
 }
-.box1 a{
-    text-decoration: none;
-    color: black
+
+.box1 h1{
+    font-weight: lighter;
 }
+
+h3{
+    font-weight: lighter;
+}
+
+.box3{
+    background-color: rgba(0, 110, 255, 0.603);
+    margin-right: 10px;
+}
+
