--- a/关于我style.css
+++ b/关于我style.css
@@ -3,6 +3,7 @@ body{
     padding: 0px;
     box-sizing: border-box;
     background-image: url(./图片/R-C\ \(1\).png);
+    height: 100vh;
 }
 
 .box{
