--- a/关于我style.css
+++ b/关于我style.css
@@ -4,6 +4,7 @@ body{
     box-sizing: border-box;
     background-image: url(./图片/R-C\ \(1\).png);
     height: 100vh;
+    width: 100vw;
 }
 
 .box{
